--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -3,6 +3,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.bookDesc {
-    
+.resultsBtns {
+    display: flex;
+    justify-content: left;
 }
+/* 
+#resultsCard {
+    display: flex;
+} */
