--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -1,13 +1,33 @@
-.resultsSearch {
-    font-size: 26px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .resultsBtns {
     display: flex;
-    justify-content: left;
+    justify-content: flex-end;
 }
-/* 
-#resultsCard {
-    display: flex;
-} */
+
+#viewBtn {
+    margin-right: 10px;
+}
+
+.desc {
+    text-align: center;
+    padding: 0px;
+    font-size: 18px;
+}
+
+.cardHold {
+    height: 10%;
+    margin-bottom: 10px;
+}
+
+.titleSaved {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 0px;
+}
+
+.authorSaved {
+    /* font-weight: bold; */
+    font-size: 18px;
+    margin-top: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
