--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -10,7 +10,9 @@
 .desc {
     text-align: center;
     padding: 0px;
-    font-size: 18px;
+    font-size: 20px;
+    margin-top: 50px;
+    margin-right: 10px;
 }
 
 .cardHold {
@@ -26,7 +28,6 @@
 }
 
 .authorSaved {
-    /* font-weight: bold; */
     font-size: 18px;
     margin-top: 0px;
     font-family: Arial, Helvetica, sans-serif;
