--- a/client/src/components/jumbotron/jumbotron.css
+++ b/client/src/components/jumbotron/jumbotron.css
@@ -8,3 +8,11 @@
     font-size: 25px;
 
 }
+.header {
+    width: 100%;
+    height: 450px;
+}
+
+.hero-body {
+    background-image: url("../../bookReact.png");
+}
