--- a/client/src/components/card/card.css
+++ b/client/src/components/card/card.css
@@ -1,4 +1,5 @@
 .resultsBtns {
+    margin-top: 200px;
     display: flex;
     justify-content: flex-end;
 }
@@ -13,7 +14,7 @@
 
 .cardHold {
     margin-top: 10px;
-    height: 5%;
+    height: 300px;
     margin-bottom: 10px;
     background-color: #ffffff;
 }
@@ -26,12 +27,19 @@
     font-size: 25px;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-bottom: 0px;
+    margin-top: 30px;
 }
 
 .authorSaved {
-    font-size: 18px;
-    margin-top: 0px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.cardImg {
+    margin-top: 20px;
+}
+
+.desc {
+    display: flex;
+    justify-content: space-around;
+}
